# storystudio-wan2-s2v

./: .bazelrc  .dockerignore  .gitignore  API_DOCUMENTATION.md  BAZEL_BUILD_GUIDE.md  BUILD.bazel  DEPENDENCY_ANALYSIS.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.v2  EC2_BUILD_GUIDE.md  EC2_COMMANDS.md  MODULE.bazel  NETWORK_VOLUME_SETUP.md  OPTIMIZATION_GUIDE.md  QUICK_START.md  README.md  RUNPOD_DOCKER_DEPLOYMENT.md  STORY_STUDIO_COMBINED.md  WARM_MODEL_ARCHITECTURE.md  app.py  build.bat  build.sh  build_and_push.sh  deploy.bat  deploy.sh  ec2_build_deploy.sh  handler.py  handler_v2.py  model_server.py  push_docker.sh  requirements.txt  start.sh  start_warm.sh  test_client.py
.github/workflows/: docker-build.yml
patches/: BUILD.bazel  README.md  apply_patches.py
