"""
Bazel build rules for Wan2.2 S2V Docker image
"""

load("@rules_oci//oci:defs.bzl", "oci_image", "oci_push")
load("@rules_pkg//pkg:tar.bzl", "pkg_tar")

# Package all project files
pkg_tar(
    name = "app_layer",
    srcs = [
        "Dockerfile",
        "requirements.txt",
        "app.py",
        "handler.py",
        "start.sh",
        "//patches:all",
    ],
    package_dir = "/workspace",
)

# Build the OCI image from Dockerfile
oci_image(
    name = "wan2_s2v_image",
    base = "@cuda_base",
    tars = [":app_layer"],
    entrypoint = ["python3", "-u", "handler.py"],
    workdir = "/workspace",
)

# Push to Docker Hub
oci_push(
    name = "push_image",
    image = ":wan2_s2v_image",
    repository = "index.docker.io/romantony/wan2-s2v",
    remote_tags = ["latest", "1.0.0"],
)
